# Bueno-Orovio-finitewave-model

./: README.md  pyproject.toml
bueno_orovio/: ops.py
examples/: bueno_orovio_example.py
implementation/: bueno_orovio_0d.py
tests/: model_test.py
